# dev-docs

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/ai_ml/: index.doctree
.doctrees/dev_ops/: index.doctree
.doctrees/python/: index.doctree
.doctrees/setup_guides/: index.doctree  machine_learning_general.doctree  python_environments.doctree  python_packages.doctree
.doctrees/standards/: index.doctree
.doctrees/tech_stacks/: ai_ml.doctree  index.doctree  python.doctree
.github/workflows/: deploy.yml
_sources/: index.rst.txt
_sources/setup_guides/: index.rst.txt  machine_learning_general.md.txt  python_environments.md.txt
_sources/standards/: index.rst.txt
_sources/tech_stacks/: ai_ml.md.txt
_static/css/: styles.css
ai_ml/: index.html
ai_ml/coding_standards/: index.html  naming_conventions.html
ai_ml/resources/: index.html  metrics.html
archived/01_getting_started/: 01_getting_on_the_same_page.md  02_getting_started.md  03_next_steps.md  04_general_setup.md  _category_.json  workflow.md
archived/02_best_practices/: 01_general_rules.md  02_python_style_guide.md  (+17 more)
dev_ops/: index.html
django/: 01_getting_started.md  02_style_guide.md
general/: 01_style_guide.md
python/: index.html
setup_guides/: index.html  machine_learning_general.html  python_environments.html  python_packages.html
source/: conf.py  index.rst
standards/: index.html
tech_stacks/: ai_ml.html  index.html  python.html
(+137 files in other folders)
