[project]
name = "dev-docs"
version = "0.1.0"
authors = [
    {name = "Thomas Gwasira", email = "tomgwasira@gmail.com"}
]
description = "CompanyX developer documentation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydata-sphinx-theme",
    "sphinx"
]

[project.optional-dependencies]
dev = []