[project]
name = "dev-docs"
version = "0.1.0"
authors = [
    {name = "Thomas Gwasira", email = "tomgwasira@gmail.com"}
]
description = "Developer documentation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "myst-parser>=4.0.0",
    "pydata-sphinx-theme>=0.16.0",
    "sphinx>=8.1.3"
    "sphinx-copybutton>=0.5.2"
]

[project.optional-dependencies]
dev = []